# arduino-libraries-rust

./: .gitignore  CONTRIBUTING.md  LICENSE  LICENSE-MIT  Makefile  QRB2210_swd.cfg  README.md  west.yml
arduino-cryptography/: Cargo.toml  README.md
arduino-cryptography/c/: ed25519.c  ed25519.h  hwrng.c  psa_wrapper.c  psa_wrapper.h  x25519.c  x25519.h  xchacha20poly1305.c  xchacha20poly1305.h
arduino-cryptography/src/: ed25519.rs  lib.rs  rng.rs  saga_xwing.rs  x25519.rs  xchacha20poly1305.rs  xwing.rs
arduino-cryptography/src/psa/: crypto.rs  errors.rs  its.rs  mod.rs  saga.rs  storable.rs  types.rs  xwing.rs
arduino-cryptography/src/saga/: errors.rs  mac.rs  mod.rs  nizk.rs  types.rs
arduino-led-matrix/: Cargo.toml
arduino-led-matrix/src/: animation.rs  ffi.rs  frame.rs  lib.rs
arduino-rpc-bridge/: Cargo.toml
arduino-rpc-bridge/src/: bridge.rs  client.rs  decoder.rs  error.rs  lib.rs  msgpack.rs  server.rs  spi_transport.rs  transport.rs
arduino-rpc-client/: Cargo.toml
arduino-rpc-client/examples/: rpc_test.rs
arduino-rpc-client/src/: lib.rs
arduino-spi-router/: Cargo.toml  arduino-spi-router.service
arduino-spi-router/src/: main.rs  rpc.rs
arduino-zcbor/: Cargo.toml
arduino-zcbor/src/: cose.rs  ffi.rs  lib.rs
docker/: Dockerfile
docs/: linkedin-article.md
examples/led-matrix-demo/: CMakeLists.txt  Cargo.toml  build.rs  prj.conf
examples/led-matrix-demo/boards/: arduino_uno_q.overlay
examples/led-matrix-demo/src/: lib.rs
examples/mlkem-client/: Cargo.toml
examples/mlkem-client/src/: main.rs
examples/mlkem-demo/: CMakeLists.txt  Cargo.toml  README.md  prj.conf
examples/mlkem-demo/boards/: arduino_uno_q.overlay
examples/mlkem-demo/src/: lib.rs
examples/pqc-client/: Cargo.toml
examples/pqc-client/src/: main.rs
examples/pqc-demo/: CMakeLists.txt  Cargo.toml  README.md  prj.conf
examples/pqc-demo/boards/: arduino_uno_q.overlay
examples/pqc-demo/src/: lib.rs
examples/pqc-demo/src/c/: matrix.c  spi_peripheral.c
examples/rpc-demo/: CMakeLists.txt  Cargo.toml  build.rs  prj.conf
examples/rpc-demo/boards/: arduino_uno_q.overlay
examples/rpc-demo/src/: lib.rs
examples/rpc-demo/src/c/: rpc_uart.c
examples/rpc-server/: CMakeLists.txt  Cargo.toml  build.rs  prj.conf
examples/rpc-server/src/: lib.rs
examples/spi-test/: CMakeLists.txt  Cargo.toml  build.rs  prj.conf
examples/spi-test/boards/: arduino_uno_q.overlay
examples/spi-test/src/: lib.rs
examples/weather-display/: Cargo.toml  README.md
examples/weather-display/src/: main.rs
