[package]
name = "arduino-spi-router"
version = "0.1.0"
edition = "2021"
description = "SPI-based RPC router for Arduino Uno Q (Linux MPU side)"
license = "Apache-2.0 OR MIT"
authors = ["Arduino Rust Team"]

[[bin]]
name = "spi-router"
path = "src/main.rs"

[dependencies]
# SPI access
spidev = "0.6"

# Async runtime
tokio = { version = "1", features = ["full"] }

# MessagePack
rmp = "0.8"
rmp-serde = "1.3"
rmpv = { version = "1.3", features = ["with-serde"] }
serde = { version = "1.0", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# CLI
clap = { version = "4", features = ["derive"] }

# Signal handling
ctrlc = "3.4"

[profile.release]
opt-level = "s"
lto = true
strip = true
