# SPDX-License-Identifier: Apache-2.0 OR MIT
#
# Arduino zcbor - Rust wrapper for Zephyr's zcbor CBOR library
#
# This library provides safe Rust bindings to zcbor, a low-footprint
# CBOR encoder/decoder designed for microcontrollers.

[package]
name = "arduino-zcbor"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Rust wrapper for Zephyr's zcbor CBOR library"

[lib]
crate-type = ["rlib"]

[features]
default = []
# Enable COSE_Sign1 support (requires arduino-cryptography with mldsa65)
cose = ["dep:arduino-cryptography"]

[dependencies]
# Optional: For COSE signatures with ML-DSA
arduino-cryptography = { path = "../arduino-cryptography", optional = true, default-features = false, features = ["mldsa65"] }
